--- a/app/components/about/about.html
+++ b/app/components/about/about.html
@@ -1,14 +1,16 @@
-<p>
-  For reward, here is a list of awesome computer scientists!
-</p>
+<div class="container">
+	<p>
+	  For reward, here is a list of awesome computer scientists!
+	</p>
 
-<p>
-  You want more? Add them yourself!
-</p>
-<p>
-  <input #newname>
-  <button (click)="addName(newname)">Add</button>
-</p>
-<ul>
-  <li *ng-for="#name of list.get()">{{name}}</li>
-</ul>
+	<p>
+	  You want more? Add them yourself!
+	</p>
+	<p>
+	  <input #newname>
+	  <button (click)="addName(newname)">Add</button>
+	</p>
+	<ul>
+	  <li *ng-for="#name of list.get()">{{name}}</li>
+	</ul>
+</div>
