--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -6,5 +6,5 @@ Gratz!
 
 <p>
 Your deployment of Angular 2 Seed worked perfectly!
-Click <a [router-link]="['/about']">here</a> to get your reward!
+Click <a [router-link]="['/todoApp']">here</a> to get your reward!
 </p>
