--- a/app/components/todoApp/todoApp.html
+++ b/app/components/todoApp/todoApp.html
@@ -28,7 +28,7 @@
 					      (keyup.enter)="enterTodo(newtodo)">
 			    </div>
 			    <div class="col-md-6">
-			      <button class="btn btn-primary" (click)="addTodo(inputValue)" 
+			      <button class="btn btn-primary" (click)="addTodo(newtodo.value)" 
 			      	class="btn btn-primary">Add</button>
 			    </div>  
 		    </div>  
